# se-prototype

./: CMakeLists.txt  README.md  client.cpp  crypto.cpp  crypto.hpp  index.cpp  index.hpp  main.cpp  protocol.cpp  protocol.hpp  server.cpp  sse_index.c  sse_search.c  utils.cpp  utils.hpp
src/: main.cpp
